--- a/school/src/main/resources/application.properties
+++ b/school/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=school
-spring.datasource.url=jdbc:mysql://localhost:3306/school_db
-spring.datasource.username=root
+#h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sultan
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-our.path=C:\\Users\\texno\\OneDrive\\Desktop\\Test
+
+info.app.name=My School App
+info.app.version=1.0.0
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=*
 
 
+spring.profiles.active=dev
+springdoc.override-with-generic-response=false
